# libphone-utils

./: .mailmap  AUTHORS  Makefile.am  TODO  configure.ac  libphone-utils.pc.in  libphone-utils_git.bb  libphone-utils_svn.bb
data/: Makefile.am  phone-utils.conf  phoneprefix
src/: Makefile.am  phone-utils-gsm.c  phone-utils-gsm.h  phone-utils.c  phone-utils.h  phone-utils.h.in  str-utils.c  str-utils.h  str_utils.c  str_utils.h
src/lib/: Makefile.am  phone-utils-gsm.c  phone-utils.c  phone-utils.h.in  str-utils.c  str-utils.h
src/python/: setup.py
src/python/phoneutils/: __init__.py  c_phoneutils.pyx
